--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.6.0",
     "@types/three": "^0.91.10",
+    "dat.gui": "^0.7.1",
     "three": "^0.91.0"
   }
 }
